# ChangeLog for sys-cluster/swift
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-cluster/swift/ChangeLog,v 1.37 2015/02/08 02:22:19 prometheanfire Exp $

*swift-2.2.2 (08 Feb 2015)

  08 Feb 2015; Matthew Thode <prometheanfire@gentoo.org> +swift-2.2.2.ebuild:
  bup

  13 Jan 2015; Matthew Thode <prometheanfire@gentoo.org>
  -files/CVE-2013-2161.patch, -files/CVE-2014-0006-havana.diff,
  -files/CVE-2014-0006-master.diff, -files/CVE-2014-3497-1.13.patch,
  -swift-1.13.1-r1.ebuild, -swift-2.0.0.ebuild, -swift-2.1.0.ebuild,
  -swift-2014.1.9999.ebuild:
  removing old, vulnerable versions

*swift-2.2.0 (18 Nov 2014)

  18 Nov 2014; Matthew Thode <prometheanfire@gentoo.org> +swift-2.2.0.ebuild:
  bup

*swift-2.1.0 (11 Oct 2014)

  11 Oct 2014; Matthew Thode <prometheanfire@gentoo.org> +swift-2.1.0.ebuild:
  bup

  01 Aug 2014; Matthew Thode <prometheanfire@gentoo.org>
  -swift-1.13.0-r1.ebuild, -swift-2013.2.9999.ebuild, swift-9999.ebuild:
  removing the old and jankey

*swift-2.0.0 (08 Jul 2014)

  08 Jul 2014; Matthew Thode <prometheanfire@gentoo.org> +swift-2.0.0.ebuild:
  bup

  24 Jun 2014; Ian Delaney <idella4@gentoo.org> -swift-1.12.0.ebuild:
  rm old

  24 Jun 2014; Ian Delaney <idella4@gentoo.org> -swift-1.13.0.ebuild,
  -swift-1.13.1.ebuild:
  rm these vulnerable versions wrt Bug #513864

*swift-1.13.0-r1 (24 Jun 2014)
*swift-1.13.1-r1 (24 Jun 2014)

  24 Jun 2014; Ian Delaney <idella4@gentoo.org> +files/CVE-2014-3497-1.13.patch,
  +swift-1.13.0-r1.ebuild, +swift-1.13.1-r1.ebuild:
  revbump; add sec. patch wrt Bug #513864

  06 Jun 2014; Jeroen Roovers <jer@gentoo.org> metadata.xml:
  Spelling (bug #512552).

*swift-1.13.1 (28 Apr 2014)
*swift-2014.1.9999 (28 Apr 2014)

  28 Apr 2014; Matthew Thode <prometheanfire@gentoo.org> +swift-1.13.1.ebuild,
  +swift-2014.1.9999.ebuild:
  icehouse swift

*swift-1.13.0 (06 Apr 2014)

  06 Apr 2014; Matthew Thode <prometheanfire@gentoo.org> +swift-1.13.0.ebuild,