@@ -1,6 +1,6 @@
 DEFINED_PHASES=compile configure install postinst prepare setup test
 DEPEND=dev-python/setuptools[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/pbr-0.6.0[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] <dev-python/pbr-1.0[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] test? ( >=dev-python/hacking-0.8.0[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] <dev-python/hacking-0.9[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] dev-python/coverage[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] dev-python/nose[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] dev-python/nosexcover[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] dev-python/openstack-nose-plugin[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] dev-python/nosehtmloutput[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/sphinx-1.1.2[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] <dev-python/sphinx-1.2[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] dev-python/oslo-sphinx[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/mock-1.0[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] dev-python/python-swiftclient[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) >=dev-lang/python-exec-2:=[python_targets_python2_7(-)?,-python_single_target_python2_7(-)]
-DESCRIPTION=A highly available, distributed, eventually consistent object/blob store
+DESCRIPTION=A highly available, distributed, and eventually consistent object/blob store
 EAPI=5
 HOMEPAGE=https://launchpad.net/swift
 IUSE=proxy account container object test +memcache python_targets_python2_7
@@ -11,4 +11,4 @@ REQUIRED_USE=|| ( proxy account container object ) || ( python_targets_python2_7
 SLOT=0
 SRC_URI=http://launchpad.net/swift/kilo/2.2.2/+download/swift-2.2.2.tar.gz
 _eclasses_=distutils-r1	c01d5c4af34f4a37a51fc9638299c222	eutils	9fb270e417e0e83d64ca52586c4a79de	linux-info	2b8c53f6065bdee2d757472215a3088f	multibuild	6d4858dc00f8bc51caf3f957f8430eb0	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	python-r1	6d3a3cb5705b9fff1aeb7cfa4e3336fe	python-utils-r1	096f8247eae93026af13ab88cf4305cd	toolchain-funcs	79b635d29abf0572d6a1b0dc8e63c0e4	user	f54e098dd38ba1c0847a13e685b87747	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=c312d1423dae91626413f5ab755891d3
+_md5_=e0553384c317ffce22c36e39002941a3
