@@ -1,31 +1,31 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-AUX swift-account.initd 995 SHA256 f1d4594504b53de480abc69ccb72d37e002ad85118b9d90df12bfda42f4b5faa SHA512 93fcd08508f3efd4d1a75aa51c20b256a0f8c34f9b6ee27501d14376efd7a55e28ffd20fbf91b6406883603fc145e80c39d714b6eaa168fbf4a8c5be7ea63368 WHIRLPOOL ff3c69ad4801d742082dbe7131330b2fb154d1b30c8abfd688234a9f955515c9a1ffceb0ced432b1dd81d375e32e8416fa64b9d45eb199af4cc0ba3aa3c87e1a
-AUX swift-container.initd 1007 SHA256 aba09a5e3396f79c5e49a258c283d37652e182ac62ef8952618ad32b4df1db86 SHA512 1202212955a6a0836abee2c8a2190e359c910037c2f38dbf6874253b21c0739548d9f48c75e3333d0d73376e35c43866b8d0dc38990d4d3b99c04efaab2407c2 WHIRLPOOL d1dc6e468fdd3ab616a53b5357dad09ef089927347a59b95961e7e6b395eec43dedef059fed8eed06f8f324ff0ec7121023953156dcf2266e00dc947aeb8da98
-AUX swift-object.initd 989 SHA256 19a252739dca026435b0a861eea10ff76c22a41ec71d94cc6ce3dddd70b5df58 SHA512 1982f2f76df5d279c51a0a2fd5619dd12a6899559761ac7c0013aa5e5098058430e1a8dcc7cf46d5081bd6dffa17e4223de9b6a85bea4cddaf495b3ca91bacc9 WHIRLPOOL d2a16db387e6d3ff3452854672b5a9c64f03f485d3ddf7e2e67aa51dcb4aa4ab80fd375158dac99943f6c52fefc233cce503be26617110765fc859d82d6b01ab
-AUX swift-proxy.initd 1505 SHA256 8e1ee2051116e869f5e51de426d640c7f57278f1fc2681bd80ec9393fa834c92 SHA512 a030a5b8ceedb69f89fca93abdd08d9f527d2789ed9983f7cca616b4a318176f84913e1d01ed09d5a1a9e55bd0d697d501f5698ea5b3f8ccce7f76b95984dff1 WHIRLPOOL e8653ceb1e19fead4b0941d158661fe6e81d66c71f032aa1be7aa56dd839d43a82adb090a7e509142bfa9a341c49fdf82c8f86e3a9159be63b538b588cca6e66
+AUX swift-account.initd 992 SHA256 a920abae629964eace9edb9e15e754bbb6765dcd6845a7f2819ed07831ea7c8b SHA512 f2ff3a7054a240d58c8b6584539365908fabcee8fdbe067dba2fb6562306a96f94450ed56a93c16e985813e266e7e0afa34e921b8d9bed754bbd85c5dab85670 WHIRLPOOL 757ccd49fcf9afbfaa5f3f7df3ee45cd30104b1c5f190a10f452bdbcdc5c1dfdc6cd9eae85d2c60c80a062f56af2cad7bc7ce80dd552ac0e812a1bc2f0e72a8e
+AUX swift-container.initd 1004 SHA256 491f8e91ceb18be23c021853099360dfac891823dd4bbde96599fe56b07b2aa0 SHA512 1466b167356a33412c02ba99470cccf15080aacedc8d265b67472991ee980dae90cfcc5852c202ae8c20ee093632f009d2f86d10b2df6d936308a5d08d29bbe4 WHIRLPOOL 490fa033625f096b58c5de0fd8eeadd9e14460384e6fe69165cfdfb17c6abceb06a07d76e04fb066eb49c7752b94e1698c92d8c21874e57162c3a86dad5ca908
+AUX swift-object.initd 986 SHA256 e53fd0e15faad19da10258d9857f24ceb0c589d06bff57f0546019fc76f0f004 SHA512 b3f91ce7a4c4439c8c7d2a06412f24ddf6315d2afed4aba20d0e8214a00ba01fb8b1d6d61f5cc8d175980264e3c53018a37c6d2e7ba922daa94a93156f1236cd WHIRLPOOL c5fbce2c8d828bf68de07490f0d3b95a03e4889e9433c3c61764b7998e3cfef6644fbc50f40aa6ae9b501df6bc50bed7b52e30a4594a9b6a84a8411bf919fade
+AUX swift-proxy.initd 1502 SHA256 65e8d40f51324e7c61121ea0d38b607084d9d1bec0859cdefb8b09a86ba993cb SHA512 17e9875b3e7f5dfaa1681279cb59708dfa12fdd866a5fb9c3968dd081a4c95d0bc51ab652916073b0b42b2ce9cfbf997093ce9c0e5d4c66b43242ef4f6dd7387 WHIRLPOOL d800071bd7e44e97ef97f4beff5f4aa8c932a01c8ddd067b3f5b1d7256554cb1d9d8eac80b738198cb3870fb88b7cf11ef41e8b842b8b898e510a11b376c6570
 DIST swift-2.2.0.tar.gz 996021 SHA256 be3bc94faf57af64f689bbe65855624ea711ada1eaf55d234a0536d76b3065f7 SHA512 606eaa777dea842588d59b3e751e346d144fa82312c40d62e7158f148da364686d29524fc7f5f1b3b9b3aab88332fa4a0515bb2fba5bcd310a2a0aa8572beaf6 WHIRLPOOL 8922e70afc797664e1aa70b5d43493c92ca7c44c3143fe028474b796cb76724b502db3d95a885e7c3bf427e1313a32c14844c103d9a260a841cb21d7637ad355
 DIST swift-2.2.2.tar.gz 1038850 SHA256 d97ff8e3c1381611ca2f9cd3eb13000e3339166e06d67ec079ce9ec958d1a088 SHA512 5abe34679305df18dabf49e6e9a6ddf7b890718a4586b1a33cadf0eb47412861a4af53d6124d2a238e463603d11b134a5afa2867939cb3cea49774ae9601d8e6 WHIRLPOOL 57f7364c0e2fa9094837b7127d4380df52a263150be05d84142e1d1256911d0466e7098a7f2a0380b087fb5da313d5a65a973f42b1e39bc102be46f21000c8ef
 EBUILD swift-2.2.0.ebuild 4118 SHA256 1b8fff08bd913c6b75c9484cdf54549530d155d106b2c1c1577f17f95432e8e5 SHA512 def7126e0817d2445b3b68ed61a353db13656cff35a9893477d57613382a59fcf4cb618fcfe4b254c8dd6fe6ebce4e4ea87df00c90a907285b2c04a3da06315a WHIRLPOOL 42c139e41ffc6f6362a4753804fe48f0d1d57221d913723cffa7482c491e18a5bc1c350726d7af9400fb1d08ec881583b7f33e363f56c5a66be10a5e0221bcf1
-EBUILD swift-2.2.2.ebuild 4103 SHA256 1974dc128edfea7689181afdba7249ad70ab9c36b43a686e94b592993e53da6f SHA512 4f8c48b1081b4d6674be38fe617de46b7b794b4ce5bf748f772271ce66ff9ec1aa95b474dfa60d6e753fa469059a8363101299e474bcc0c951820bba94025f75 WHIRLPOOL f86c76898e5993b400f6e5f0ef96dea97b69ed3a997eb5b996803fe605d5b9ef0a0a9f96d2666d4381b74ec8a630e3b3603dd0d465fb0816f319fc0f59ebbef1
+EBUILD swift-2.2.2.ebuild 4042 SHA256 6f996b68fee39cf8416650ddd5590d4260fca4f9c4a0097e139161fc13f5824c SHA512 f44edff661240337e58c046bcafbfa76544d3910cbcb697da0fe9ec82e461020f73423433ba9fc12f9a7289d309dfa45a626c496acbe9b2c50144122117bda79 WHIRLPOOL 4a93a9ec7fba494e257321d781d7ea5cfcf141d47316fae7e2d1250231d171dae8523d9c5aa0177df04a238dd455cd8f145bad09f715d074cefaa242832d7ec0
 EBUILD swift-9999.ebuild 3995 SHA256 0e9b13e7327e541b2afd5cce0b25118452d2df36a0b00355b4a1bf78af07ea8f SHA512 b9dfadc3a915c5c24c6ed34415023f06ce0e736f5a892b8266311eb79a7c81f722750f5356aa7fbf2709594517df61fd1c78cb6816b98bc8f15efdfb16f73f61 WHIRLPOOL 9319a30f1c3320a81fb6c13770ca7852f2eda5f1d589a3c6d02d9c4154af6d35d6c5609a86affaf602f15774dcb4302b12ee29aa64420a114630b321ed9b194b
-MISC ChangeLog 6847 SHA256 a32e6ccb34ea6c4ca94b22578006f3446d45fba7255793ca5bf5c42209999e23 SHA512 83576e9d9d6fcceb137b9377e3562a00ca65cbdeca0feeabc1f0ccd65849b96b9203de75c02fbeb6189e42530dd74b7c5cef9b651da6283dd42e62c3c27ebf1d WHIRLPOOL 088add2774b713846fc1114b34ae3c5c0929be514a6e672431194495ecd14d645230f65c9cb56aa0549dfcb0dbd18a1f546ebba721dd761c04a6491d20b5b6f8
+MISC ChangeLog 7073 SHA256 9125cd93085e94ba6b1c574af6460e55650be1b0adca2b4ac3d424bcf5c6ed08 SHA512 a5fb2659dca80673e27ed0918317d1862fe2aa695260c3eb2c2e33be575638db27fac2f1e59375e20f8d49081e9a09928ba00a0cdfa11732a07473492896c66b WHIRLPOOL 8c41bd84d74ae71c26a0e01e7d72e0c4efc4f9c19c4b5b49c94ee978741b39974482da53c73817a913a489a66143a3e6f9de9d0d70651a3e80e8bbca62032507
 MISC metadata.xml 718 SHA256 3b5950b308bb7bff9c0b1e1df0ec6d2616a42225c6a60f8d23f8774cf3dcb0d8 SHA512 e86d128b5c6ccacfcb8032d33cc1a7e00ecfaa1d0e1fe325ef067f0073a5d411e27e84f89e7f843a7d242d8aca2163978f08f71f91bef43675adb5156d4716df WHIRLPOOL 8fdfc74a8b54c32edc06618e7ac59227a79ab24b32ee8757f14cd2dbed49786422bed58b4dce1808397856604027d0a148f74bb0d0e97cbaa232030fb93e0454
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJU1sh3AAoJEGSje+quGaTockkP/R7gNG5aNYCdsCsbW3QuEyXv
-LxkRiHclmsreTD9/CZSzZCcXvZH/nXFc3SvU1UK8NdcZ2june6SrWBbNVTHmcKfj
-o7cuMudW/n3a/nBCVChrRWY59xZ4HEEreuVuFoZRL3NHO8uQtD7QNFroH9ywxTi7
-x0QA6pm6qCoXgdu7R5xEbVUrlIM0OX+4usE/QmyfqPQGOU1bb7JcG0NJA0h1u2aq
-2PVuOtgBAUKcGFochb/fNHoSGkTKAn+SAsMOteaR43/Ax+q42tPQJanSX+WbJzHB
-muNXliv8ltnWupBPVh3pMtnET2sznYgEX/qhFVWViB0lLYEXeSNuHNYYQ3W5t6+J
-a5eyrWXOm44NUCEH7g6T9tNOo+05CA3GC9WquY1/j/CH0ZBK8YHgwkMoY8MGk5T+
-7WHQdzDMPiFreQUdr9EQAsNa+4QTqPP0ky5AewQ5mmULQNv3EkX3NQb7zEUynXwa
-c+TAd+7qqssl+LfV8nJcvxXkwDzjzaw9o5H4KLQ/f2S+wQptwbN1/bXeNK10TuaC
-5N6p7OTkvkrIoOZhTkNohsl1yeIE2HKj/TxgSL48+lIYwyFk8O+4zY0h6r0ZR7Ea
-Q6WCBkC6pQfUqZf0rDQPy0sF0WtK08uJqm0+UB7fuzrXZnzJpRz5w09Nc4O7Ie6y
-2Rxs6Fl9jb+kWpeON9B9
-=lJVM
+iQIcBAEBCAAGBQJVIKCMAAoJEGSje+quGaTocewP/31zP88BI+v06OUvxyqoXk0U
+FGczopyrjH5n2ahbwydaXikis5I0Pk2c1f+5kv8tvQeyTuQWxroFlZE8J+NMQqfp
+Keq+j0goZfF0IO4b4HZXNipJ6iO2TyDGSq81eJt6vb1bSc7zY+oq0TKNPFkBaxZa
+gW3K2/UgEaTxRQG5lgk/byecwqZ0nhkyxJVAEXIF4wcTWF1iDYjlCzOApglbislp
+GKfIulrFF4wmY7Kic3cvcPNwD/KijXd2iNx2X81kCYBoylB6k/wbSjEjxssLYyIA
+Pv+FjEOcTer3D8gDabWWbBvT3jcMvrtcgjgtXprvlhvTUA0YYkgfrMRnQGpVAT6O
+zgTftCHLeB4YweiULaRT+h4kz7Rd+u0mZY5pm586PPwqFREiwaYKWsujYpFR+gji
+b0j+MSAksIpqMv5UG/Ry8I5wduoeIwvWFA8qfNDBIRFl/U/asLsaqPJ3BrWZXpJp
+CqCj1aapLtV+BhhfEuePNV3PvzC6aKoJaGwqb9ucpGyElZA6gIL3hz4CutVx1ThN
+KP7E6f1Fx6Sp92e0freWO2LRy2U9BpKK3GVR1XOxyQEhDVHUiOLUuUeLAfT+H71J
+KaMhzF6r7OCscSlEQYLee3S0Udlo4uGsaxV/WNBpFi0XkiNteTQc5xNX0EupobrH
+6lVzE7SVVDrfWWpbytIg
+=r5X8
 -----END PGP SIGNATURE-----
