@@ -1,6 +1,11 @@
 # ChangeLog for sys-cluster/swift
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/swift/ChangeLog,v 1.37 2015/02/08 02:22:19 prometheanfire Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/swift/ChangeLog,v 1.38 2015/04/05 02:40:10 prometheanfire Exp $
+
+  05 Apr 2015; Matthew Thode <prometheanfire@gentoo.org>
+  files/swift-account.initd, files/swift-container.initd,
+  files/swift-object.initd, files/swift-proxy.initd, swift-2.2.2.ebuild:
+  fixing init scripts for bug 511710
 
 *swift-2.2.2 (08 Feb 2015)
 
